--- a/themes/erick/layouts/index.html
+++ b/themes/erick/layouts/index.html
@@ -18,7 +18,7 @@
     <header class="home__header container">
       <h1><strong>e</strong>couto<small>.me</small></h1>
       <ul>
-        <li><a class="workLink" href="javascript:void(0)">work</a></li>
+        <li>Comming soon...</li>
       </ul>
     </header>
 
